# huckleberry

./: .gitignore  .python-version  README.md  bottled_huckleberry.py  config.yml.sample  hound.py  hound_waker.py  huckleberry.py  logging.yml  myque.py  pyproject.toml  requirements.txt  response_processor.py  vad.py  virtualenvreqs.txt  waker.py
audio/: audio_manager.py  audio_stream.py
audio_handler/: basic.py  stream.py  streams.py
client/: hound.py
config/: __init__.py  config.py
examples/: README.md  bottled_huckleberry.py  config.yml.sample  logging.yml  oypi_handler.py  requirements.txt
handler/: houndify_handler.py
huckleberry/: __init__.py  huckleberry.py
huckleberry/audio/: __init__.py  audio_manager.py  audio_stream.py
huckleberry/client/: __init__.py  hound.py
huckleberry/config/: __init__.py  config.py
huckleberry/handler/: houndify_handler.py
huckleberry/util/: list_device_index.py
huckleberry/waker/: __init__.py  ok_hound.py  vad.py  wakeword.py
signalers/: signaler.py
tests/: test_config.py
waker/: hound_waker.py  vad.py  waker.py
