[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huckleberry"
version = "0.1.0"
description = "voice command"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Oliver Yeun", email = "oliveryeun@gmail.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "houndify",
    "numpy",
    "pocketsphinx",
    "PyAudio",
    "webrtcvad",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["huckleberry*"]